[metadata]
name = podbean_downloader
version = 0.0.1
url = https://github.com/silktown-software/podbean_downloader
license = WTFPL
author = Silktown Software
author_email = contact@silktown.software
description = Bulk downloads podcasts from podbean.com given a podcaster's podbean page
long_description = file: README.md

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = podbean_downloader
install_requires =
    beautifulsoup4==4.9.3
    certifi==2020.12.5
    chardet==4.0.0
    idna==2.10
    requests==2.25.1
    soupsieve==2.1
    tqdm==4.57.0
    urllib3==1.26.2

[options.entry_points]
console_scripts =
    podbean-downloader = podbean_downloader.downloader:downloader
